[package]
name = "bsf"
version = "0.1.0"
edition = "2021"
authors = ["Balachandran mailme.balachandran@gmail.com"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/mailmebalachandran/homebrew-bsf"
keywords = ["path", "pattern"]
categories = ["command-line-utilities"]
description = "entry code for search the file based on pattern"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
globwalk = "0.8.1"
ignore = "0.4.18"